--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "tailwindcss": "https://aistudiocdn.com/tailwindcss@^4.1.17",
+    "next/": "https://aistudiocdn.com/next@^16.0.5/",
+    "next": "https://aistudiocdn.com/next@^16.0.5",
+    "jose": "https://aistudiocdn.com/jose@^6.1.2",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.0",
+    "@supabase/ssr": "https://aistudiocdn.com/@supabase/ssr@^0.8.0"
   }
 }
 </script>
